spacing fix

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -475,7 +475,7 @@ a:hover.button span {
 }
 #main {
   /*margin: 0 34px 0 0;*/
-  padding: 0 2em 24px 2px;
+  padding: 0 1em 24px 2px;
   /*width: 715px;*/
   float: left;
   clear: both;
